--- a/frontend/src-tauri/Cargo.toml
+++ b/frontend/src-tauri/Cargo.toml
@@ -26,10 +26,9 @@ anyhow = "1.0"
 once_cell = "1.17.1"
 
 # Cross-platform audio capture
-cpal = { git = "https://github.com/Kree0/cpal.git", branch = "master" }
-
+cpal = "0.15.3"
 # Wav encoding
-hound = "3.5"
+hound = "=3.5"
 
 # Cli ! shouldn't be required if using as lib
 clap = { version = "4.3", features = ["derive"] }
@@ -93,3 +92,6 @@ memory-stats = "1.0"
 strsim = "0.10.0"
 futures = "0.3.31"
 tracing-subscriber = "0.3.16"
+
+[patch.'https://github.com/Kree0/cpal.git']
+cpal = { version = "0.15.3", features = ["alsa"] }
