build with explicit flags

--- a/frontend/src-tauri/.cargo/config.toml
+++ b/frontend/src-tauri/.cargo/config.toml
@@ -1,3 +1,4 @@
+# macOS-specific optimizations
 [target.aarch64-apple-darwin]
 rustflags = [
     "-C", "link-arg=-mmacosx-version-min=14.2",
@@ -6,6 +7,33 @@ rustflags = [
 [target.x86_64-apple-darwin]
 rustflags = [
     "-C", "link-arg=-mmacosx-version-min=14.2",
+]
+
+# Windows CPU optimizations (CRITICAL for performance)
+# Enables SIMD instructions (AVX2, SSE4.2, FMA) for 1.5-2x speedup
+[target.x86_64-pc-windows-msvc]
+rustflags = [
+    "-C", "target-cpu=native",      # Enable all CPU features (AVX2, SSE4.2, FMA)
+    "-C", "opt-level=3",            # Maximum optimizations
+]
+
+[target.x86_64-pc-windows-gnu]
+rustflags = [
+    "-C", "target-cpu=native",
+    "-C", "opt-level=3",
+]
+
+# Linux CPU optimizations (match Windows performance)
+[target.x86_64-unknown-linux-gnu]
+rustflags = [
+    "-C", "target-cpu=native",      # Enable all CPU features
+    "-C", "opt-level=3",            # Maximum optimizations
+]
+
+[target.aarch64-unknown-linux-gnu]
+rustflags = [
+    "-C", "target-cpu=native",
+    "-C", "opt-level=3",
 ]
 
 [env]
